--- a/front/index.html
+++ b/front/index.html
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FaceShield - Auth 3.0</title>
-  <link rel="stylesheet" href="Login/CSS/css.css">
+  <link rel="stylesheet" href="Inicio/CSS/css.css">
 </head>
 <body class="auth-container">
   <div class="decorative-border"></div>
@@ -26,7 +25,7 @@
     <a href="#" class="glowingbutton" onclick="initAuth('login')">
       Entrar 
     </a>
-    <a href="#" class="glowingbutton secondary-button" onclick="initAuth('register')">
+    <a href="Cadastro/cadastro.html" class="glowingbutton secondary-button" onclick="initAuth('register')">
       Novo Cadastro
     </a>
 </div>
@@ -36,7 +35,7 @@
     <div class="loading-spinner"></div>
   </div>
 
-  <script src="Login/JS/js.js">
+  <script src="Inicio/JS/js.js">
    
   </script>
 </body>
