--- a/front/index.html
+++ b/front/index.html
@@ -22,9 +22,10 @@
   </div>
 
   <div class="auth-actions-container">
-    <a href="#" class="glowingbutton" onclick="initAuth('login')">
-      Entrar 
+    <a href="#" class="glowingbutton" onclick="initAuth('login', event)">
+      Entrar
     </a>
+    
     <a href="Cadastro/cadastro.html" class="glowingbutton secondary-button" onclick="initAuth('register')">
       Novo Cadastro
     </a>
