--- a/front/Cadastro/cadastro.html
+++ b/front/Cadastro/cadastro.html
@@ -11,7 +11,9 @@
         <div class="background-image"></div>
         <div class="background-overlay"></div>
     </div>
-
+    <div class="botaoVoltar">
+        <a class="buttonVoltar" href="../index.html">Voltar</a></div>
+            
     <main class="main-content">
         <div class="logo-container">
             <img src="../Recursos/LogoFaceShield.png" alt="Logo da Empresa" class="logo">
