--- a/front/index.html
+++ b/front/index.html
@@ -22,7 +22,7 @@
   </div>
 
   <div class="auth-actions-container">
-    <a href="#" class="glowingbutton" onclick="initAuth('login', event)">
+    <a href="Login/CameraLogin.html" class="glowingbutton" onclick="initAuth('login', event)">
       Entrar
     </a>
     
