cadastro nao ta pronto!

--- a/front/Cadastro/cadastro.html
+++ b/front/Cadastro/cadastro.html
@@ -42,14 +42,14 @@
                     <span class="validation-icon"></span>
                 </div>
 
-                <div class="input-group floating-label" id="username-group" style="display: none;">
+                <div class="input-group floating-label" id="username-group">
                     <input type="text" id="username" name="username">
                     <label for="username">Nome de Usuário</label>
                     <div class="input-border"></div>
                     <span class="validation-icon"></span>
                 </div>
 
-                <div class="input-group floating-label" id="senha-group" style="display: none;">
+                <div class="input-group floating-label" id="senha-group">
                     <input type="password" id="senha" name="senha">
                     <label for="senha">Senha</label>
                     <div class="input-border"></div>
