--- a/front/Login/LoginProfessor.html
+++ b/front/Login/LoginProfessor.html
@@ -37,7 +37,7 @@
                     <span class="validation-icon"></span>
                 </div>
 
-                <button type="submit" class="botao">Entrar</button>
+                <a href="../MenuProf/Menu.html" class="botao">Entrar</a>
             </form>
         </div>
     </main>
