--- a/front/MenuProf/Menu.html
+++ b/front/MenuProf/Menu.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistema de Empréstimos</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <script src="JS/JSMenu.js"></script>
+    <script src="JS/menuJS.js"></script>
     <link rel="stylesheet" href="CSS/Menu.css">
 </head>
 <body>
@@ -33,7 +33,7 @@
         </div>
 
         <!-- Locais -->
-        <div class="menu-card" id="locais">
+        <div class="menu-card" id="locais" onclick="window.location.href='../Locais/local.html'">
             <h2>Locais</h2>
             <p>Áreas de empréstimo cadastradas</p>
         </div>
@@ -48,6 +48,5 @@
     
     <a href="../index.html" class="logout-btn" id="logout">Sair</a>
 
-    <script src="script.js"></script>
 </body>
 </html>
