--- a/front/MenuProf/Menu.html
+++ b/front/MenuProf/Menu.html
@@ -3,33 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistema de Empréstimos</title>
+    <title>Sistema do Professor</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <script src="JS/menuJS.js"></script>
     <link rel="stylesheet" href="CSS/Menu.css">
 </head>
 <body>
     <div class="header">
-        <h1>Sistema de Empréstimos</h1>
+        <h1>Sistema do Professor</h1>
     </div>
 
     <div class="menu-container">
         <!-- Alunos -->
-        <div class="menu-card" id="alunos">
+        <div class="menu-card" id="alunos" onclick="window.location.href='#'" >
             <h2>Alunos</h2>
             <p>Visualizar alunos cadastrados</p>
         </div>
 
         <!-- Empréstimos -->
-        <div class="menu-card" id="emprestimos">
+        <div class="menu-card" id="emprestimos" onclick="window.location.href='#'" >
             <h2>Empréstimos</h2>
-            <p>Registros de itens emprestados</p>
+            <p>Histórico de itens emprestados</p>
         </div>
 
         <!-- Ferramentas -->
-        <div class="menu-card" id="ferramentas">
+        <div class="menu-card" id="ferramentas" onclick="window.location.href='#'" >
             <h2>Ferramentas</h2>
-            <p>Lista de ferramentas disponíveis</p>
+            <p>Visualizar ferramentas cadastradas</p>
         </div>
 
         <!-- Locais -->
@@ -39,9 +39,9 @@
         </div>
 
         <!-- Novo Empréstimo -->
-        <div class="menu-card" id="novo-emprestimo">
+        <div class="menu-card" id="novo-emprestimo" onclick="window.location.href='#'">
             <h2>Fazer Empréstimo</h2>
-            <p>Registrar novo empréstimo</p>
+            <p>Registrar empréstimo do professor</p>
         </div>
     </div>
 
