--- a/front/Cadastro/cadastro.html
+++ b/front/Cadastro/cadastro.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro</title>
     <link rel="stylesheet" href="CSS/CssCadastro.css">
+    <script src="JS/JSCadastro.js"></script>
 </head>
 <body>
     <div class="background">
