--- a/front/ListaAluno/ListAluno.html
+++ b/front/ListaAluno/ListAluno.html
@@ -18,7 +18,7 @@
     </div>
 
     <div class="container">
-        <a href="Menu.html" class="back-btn">← Voltar ao Menu</a>
+        <a href="../MenuProf/Menu.html" class="back-btn">← Voltar ao Menu</a>
 
         <div class="turma-selector">
             <label for="turma-select">Selecione a Turma:</label>
@@ -40,8 +40,8 @@
             </div>
         </div>
     </div>
-
-    <button class="logout-btn" id="logout">Sair</button>
+    <a href="../index.html" class="logout-btn">Sair</a>
+    
 
     <script src="JS/ListaAlunJS.js" defer></script>
 </body>
