--- a/front/MenuProf/Menu.html
+++ b/front/MenuProf/Menu.html
@@ -15,7 +15,7 @@
 
     <div class="menu-container">
         <!-- Alunos -->
-        <div class="menu-card" id="alunos" onclick="window.location.href='#'" >
+        <div class="menu-card" id="alunos" onclick="window.location.href='../ListaAluno/ListAluno.html'" >
             <h2>Alunos</h2>
             <p>Visualizar alunos cadastrados</p>
         </div>
