--- a/front/ListaAluno/ListAluno.html
+++ b/front/ListaAluno/ListAluno.html
@@ -38,7 +38,7 @@
         <div class="main-content">
             <div class="header">
                 <h1 class="page-title"><i class="fas fa-user-graduate"></i> Alunos Matriculados</h1>
-                <button class="logout-btn" onclick="logout()">
+                <button class="logout-btn" onclick="window.location.href='../index.html'">
                     <i class="fas fa-sign-out-alt"></i> Sair do Sistema
                 </button>
             </div>
