--- a/front/ListaFerramentas/ListaFerramentas.html
+++ b/front/ListaFerramentas/ListaFerramentas.html
@@ -38,7 +38,7 @@
         <div class="main-content">
             <div class="header">
                 <h1 class="page-title"><i class="fas fa-toolbox"></i> Ferramentas Cadastradas</h1>
-                <button class="logout-btn" onclick="logout()">
+                <button class="logout-btn" onclick="window.location.href='../index.html'">
                     <i class="fas fa-sign-out-alt"></i> Sair do Sistema
                 </button>
             </div>
@@ -47,9 +47,6 @@
             <div class="action-buttons">
                 <button class="btn btn-primary" onclick="openAddToolModal()">
                     <i class="fas fa-plus"></i> Adicionar Ferramenta
-                </button>
-                <button class="btn btn-success" onclick="exportTools()">
-                    <i class="fas fa-file-export"></i> Exportar Lista
                 </button>
             </div>
 
