--- a/front/VerEmprestimo/Emprestimos.html
+++ b/front/VerEmprestimo/Emprestimos.html
@@ -17,7 +17,7 @@
             <div class="menu-item" onclick="window.location.href='../ListaAluno/ListAluno.html'">
                 <i class="fas fa-user-graduate"></i> Alunos
             </div>
-            <div class="menu-item active" onclick="navigate('emprestimos')">
+            <div class="menu-item active">
                 <i class="fas fa-clipboard-list"></i> Empréstimos
             </div>
             <div class="menu-item" onclick="window.location.href='../ListaFerramentas/ListaFerramentas.html'">
@@ -38,7 +38,7 @@
         <div class="main-content">
             <div class="header">
                 <h1 class="page-title"><i class="fas fa-history"></i> Histórico de Empréstimos</h1>
-                <button class="logout-btn" onclick="logout()">
+                <button class="logout-btn" onclick="window.location.href='../index.html'">
                     <i class="fas fa-sign-out-alt"></i> Sair do Sistema
                 </button>
             </div>
