--- a/front/ListaAluno/ListAluno.html
+++ b/front/ListaAluno/ListAluno.html
@@ -14,7 +14,7 @@
             <div class="logo">
                 <h2><i class="fas fa-tools"></i> Controle de Empréstimos</h2>
             </div>
-            <div class="menu-item active" onclick="navigate('alunos')">
+            <div class="menu-item active" onclick="window.location.href='../ListaAluno/ListAluno.html'">
                 <i class="fas fa-user-graduate"></i> Alunos
             </div>
             <div class="menu-item" onclick="window.location.href='../VerEmprestimo/Emprestimos.html'">
@@ -23,7 +23,7 @@
             <div class="menu-item" onclick="window.location.href='../ListaFerramentas/ListaFerramentas.html'">
                 <i class="fas fa-toolbox"></i> Ferramentas
             </div>
-            <div class="menu-item" onclick="navigate('locais')">
+            <div class="menu-item" onclick="window.location.href='../Locais/local.html'">
                 <i class="fas fa-map-marker-alt"></i> Locais
             </div>
             <div class="menu-item" onclick="navigate('novo-emprestimo')">
