--- a/front/VerEmprestimo/Emprestimos.html
+++ b/front/VerEmprestimo/Emprestimos.html
@@ -23,7 +23,7 @@
             <div class="menu-item" onclick="window.location.href='../ListaFerramentas/ListaFerramentas.html'">
                 <i class="fas fa-toolbox"></i> Ferramentas
             </div>
-            <div class="menu-item" onclick="navigate('locais')">
+            <div class="menu-item" onclick="window.location.href='../Locais/local.html'">
                 <i class="fas fa-map-marker-alt"></i> Locais
             </div>
             <div class="menu-item" onclick="navigate('novo-emprestimo')">
