Arrumando cagada do Kauã

--- a/front/Cadastro/cadastro.html
+++ b/front/Cadastro/cadastro.html
@@ -26,8 +26,8 @@
                 <div class="input-group floating-label">
                     <select id="tipoUsuario" name="tipoUsuario" required style="background: rgba(30, 41, 59, 0.3); color: white; padding: 1.2rem; border-radius: 8px; border: 1px solid rgba(0, 224, 255, 0.3); font-size: 1.1rem;">
                         <option value="" disabled selected hidden>Selecione o tipo de usuário</option>
-                        <option value="aluno">Aluno</option>
-                        <option value="professor">Professor</option>
+                        <option value="1">Aluno</option>
+                        <option value="2">Professor</option>
                     </select>
                 </div>
                 
