--- a/front/Cadastro/cadastro.html
+++ b/front/Cadastro/cadastro.html
@@ -10,7 +10,7 @@
   <body>
     <div class="background">
       <div class="background-image"></div>
-      <div class="background-overlay"></div>
+      <div class="bsackground-overlay"></div>
     </div>
     <div class="botaoVoltar">
       <a class="buttonVoltar" href="../index.html">Voltar</a>
