--- a/front/ListaAluno/ListAluno.html
+++ b/front/ListaAluno/ListAluno.html
@@ -1,121 +1,158 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sistema de Empréstimos - Alunos</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="CSS/ListaAlunCss.css">
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+    <link rel="stylesheet" href="CSS/ListaAlunCss.css" />
+  </head>
+  <body>
     <div class="container">
-        <!-- Menu Lateral -->
-        <div class="sidebar">
-            <div class="logo">
-                <h2><i class="fas fa-tools"></i> Controle de Empréstimos</h2>
-            </div>
-            <div class="menu-item active" onclick="window.location.href='../ListaAluno/ListAluno.html'">
-                <i class="fas fa-user-graduate"></i> Alunos
-            </div>
-            <div class="menu-item" onclick="window.location.href='../VerEmprestimo/Emprestimos.html'">
-                <i class="fas fa-clipboard-list"></i> Empréstimos
-            </div>
-            <div class="menu-item" onclick="window.location.href='../ListaFerramentas/ListaFerramentas.html'">
-                <i class="fas fa-toolbox"></i> Ferramentas
-            </div>
-            <div class="menu-item" onclick="window.location.href='../Locais/local.html'">
-                <i class="fas fa-map-marker-alt"></i> Locais
-            </div>
-            <div class="menu-item" onclick="navigate('novo-emprestimo')">
-                <i class="fas fa-plus-circle"></i> Novo Empréstimo
-            </div>
-            <div class="menu-item" onclick="window.location.href='../index.html'">
-                <i class="fas fa-sign-out-alt"></i> Sair
-            </div>
+      <!-- Menu Lateral -->
+      <div class="sidebar">
+        <div class="logo">
+          <h2><i class="fas fa-tools"></i> Controle de Empréstimos</h2>
+        </div>
+        <div
+          class="menu-item active"
+          onclick="window.location.href='../ListaAluno/ListAluno.html'"
+        >
+          <i class="fas fa-user-graduate"></i> Alunos
+        </div>
+        <div
+          class="menu-item"
+          onclick="window.location.href='../VerEmprestimo/Emprestimos.html'"
+        >
+          <i class="fas fa-clipboard-list"></i> Empréstimos
+        </div>
+        <div
+          class="menu-item"
+          onclick="window.location.href='../ListaFerramentas/ListaFerramentas.html'"
+        >
+          <i class="fas fa-toolbox"></i> Ferramentas
+        </div>
+        <div
+          class="menu-item"
+          onclick="window.location.href='../Locais/local.html'"
+        >
+          <i class="fas fa-map-marker-alt"></i> Locais
+        </div>
+        <div class="menu-item" onclick="navigate('novo-emprestimo')">
+          <i class="fas fa-plus-circle"></i> Novo Empréstimo
+        </div>
+        <div class="menu-item" onclick="window.location.href='../index.html'">
+          <i class="fas fa-sign-out-alt"></i> Sair
+        </div>
+      </div>
+
+      <!-- Conteúdo Principal - Página de Alunos -->
+      <div class="main-content">
+        <div class="header">
+          <h1 class="page-title">
+            <i class="fas fa-user-graduate"></i> Alunos Matriculados
+          </h1>
+          <button
+            class="logout-btn"
+            onclick="window.location.href='../index.html'"
+          >
+            <i class="fas fa-sign-out-alt"></i> Sair do Sistema
+          </button>
         </div>
 
-        <!-- Conteúdo Principal - Página de Alunos -->
-        <div class="main-content">
-            <div class="header">
-                <h1 class="page-title"><i class="fas fa-user-graduate"></i> Alunos Matriculados</h1>
-                <button class="logout-btn" onclick="window.location.href='../index.html'">
-                    <i class="fas fa-sign-out-alt"></i> Sair do Sistema
-                </button>
-            </div>
-
-            <!-- Botões de Ação -->
-            <div class="action-buttons">
-                <button class="btn btn-primary" onclick="openAddStudentModal()">
-                    <i class="fas fa-plus"></i> Adicionar Aluno
-                </button>
-            </div>
-
-            <!-- Filtros e Pesquisa -->
-            <div class="search-section">
-                <div class="search-group">
-                    <i class="fas fa-search"></i>
-                    <input type="text" id="search-input" placeholder="Pesquisar aluno..." oninput="searchStudents()">
-                </div>
-            </div>
-
-            <!-- Tabela de Alunos - Simplificada -->
-            <div style="overflow-x: auto;">
-                <table class="students-table">
-                    <thead>
-                        <tr>
-                            <th>ID</th>
-                            <th>Nome</th>
-                            <th>Sobrenome</th>
-                            <th>Turma</th>
-                        </tr>
-                    </thead>
-                    <tbody id="students-table-body">
-                        <!-- Dados serão carregados via JavaScript -->
-                    </tbody>
-                </table>
-            </div>
-
-            <!-- Modal para Adicionar/Editar Aluno -->
-            <div id="student-modal" class="modal">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h2 id="modal-title">Adicionar Novo Aluno</h2>
-                        <button class="close-btn" onclick="closeModal()">&times;</button>
-                    </div>
-                    <div class="modal-body">
-                        <form id="student-form">
-                            <input type="hidden" id="student-id">
-                            
-                            <div class="form-row">
-                                <div class="form-group">
-                                    <label for="first-name">Nome</label>
-                                    <input type="text" id="first-name" class="form-control" required>
-                                </div>
-                                <div class="form-group">
-                                    <label for="last-name">Sobrenome</label>
-                                    <input type="text" id="last-name" class="form-control" required>
-                                </div>
-                            </div>
-                            
-                            <div class="form-group">
-                                <label for="class">Turma</label>
-                                <select id="class" class="form-control" required>
-                                    <option value="">Selecione uma turma</option>
-                                    <option value="1º INFO A">1º Oficina Industrial</option>
-                                    <option value="1º INFO B">2º Oficina</option>
-                                </select>
-                            </div>
-                        </form>
-                    </div>
-                    <div class="modal-footer">
-                        <button class="btn" onclick="closeModal()">Cancelar</button>
-                        <button class="btn btn-primary" onclick="saveStudent()">Salvar Aluno</button>
-                    </div>
-                </div>
-            </div>
+        <!-- Botões de Ação -->
+        <div class="action-buttons">
+          <button class="btn btn-primary" onclick="openAddStudentModal()">
+            <i class="fas fa-plus"></i> Adicionar Aluno
+          </button>
         </div>
+
+        <!-- Filtros e Pesquisa -->
+        <div class="search-section">
+          <div class="search-group">
+            <i class="fas fa-search"></i>
+            <input
+              type="text"
+              id="search-input"
+              placeholder="Pesquisar aluno..."
+              oninput="searchStudents()"
+            />
+          </div>
+        </div>
+
+        <!-- Tabela de Alunos - Simplificada -->
+        <div style="overflow-x: auto">
+          <table class="students-table">
+            <thead>
+              <tr>
+                <th>ID</th>
+                <th>Nome</th>
+                <th>Sobrenome</th>
+                <th>Turma</th>
+              </tr>
+            </thead>
+            <tbody id="students-table-body">
+              <!-- Dados serão carregados via JavaScript -->
+            </tbody>
+          </table>
+        </div>
+
+        <!-- Modal para Adicionar/Editar Aluno -->
+        <div id="student-modal" class="modal">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h2 id="modal-title">Adicionar Novo Aluno</h2>
+              <button class="close-btn" onclick="closeModal()">&times;</button>
+            </div>
+            <div class="modal-body">
+              <form id="student-form">
+                <input type="hidden" id="student-id" />
+
+                <div class="form-row">
+                  <div class="form-group">
+                    <label for="first-name">Nome</label>
+                    <input
+                      type="text"
+                      id="first-name"
+                      class="form-control"
+                      required
+                    />
+                  </div>
+                  <div class="form-group">
+                    <label for="last-name">Sobrenome</label>
+                    <input
+                      type="text"
+                      id="last-name"
+                      class="form-control"
+                      required
+                    />
+                  </div>
+                </div>
+
+                <div class="form-group">
+                  <label for="class">Turma</label>
+                  <select id="class" class="form-control" required>
+                    <option value="">Selecione uma turma</option>
+                    <option value="1º INFO A">1º Oficina Industrial</option>
+                    <option value="1º INFO B">2º Oficina</option>
+                  </select>
+                </div>
+              </form>
+            </div>
+            <div class="modal-footer">
+              <button class="btn" onclick="closeModal()">Cancelar</button>
+              <button class="btn btn-primary" onclick="saveStudent()">
+                Salvar Aluno
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script src="JS/ListaAlunJS.js" defer></script>
-</body>
+  </body>
 </html>
