--- a/front/VerEmprestimo/Emprestimos.html
+++ b/front/VerEmprestimo/Emprestimos.html
@@ -1,106 +1,129 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sistema de Empréstimos - Histórico</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="CSS/EmprestimoVisu.css">
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+    <link rel="stylesheet" href="CSS/EmprestimoVisu.css" />
+  </head>
+  <body>
     <div class="container">
-        <!-- Menu Lateral -->
-        <div class="sidebar">
-            <div class="logo">
-                <h2><i class="fas fa-tools"></i> Controle de Empréstimos</h2>
-            </div>
-            <div class="menu-item" onclick="window.location.href='../ListaAluno/ListAluno.html'">
-                <i class="fas fa-user-graduate"></i> Alunos
-            </div>
-            <div class="menu-item active">
-                <i class="fas fa-clipboard-list"></i> Empréstimos
-            </div>
-            <div class="menu-item" onclick="window.location.href='../ListaFerramentas/ListaFerramentas.html'">
-                <i class="fas fa-toolbox"></i> Ferramentas
-            </div>
-            <div class="menu-item" onclick="window.location.href='../Locais/local.html'">
-                <i class="fas fa-map-marker-alt"></i> Locais
-            </div>
-            <div class="menu-item" onclick="navigate('novo-emprestimo')">
-                <i class="fas fa-plus-circle"></i> Novo Empréstimo
-            </div>
-            <div class="menu-item" onclick="window.location.href='../index.html'">
-                <i class="fas fa-sign-out-alt"></i> Sair
-            </div>
+      <!-- Menu Lateral -->
+      <div class="sidebar">
+        <div class="logo">
+          <h2><i class="fas fa-tools"></i> Controle de Empréstimos</h2>
+        </div>
+        <div
+          class="menu-item"
+          onclick="window.location.href='../ListaAluno/ListAluno.html'"
+        >
+          <i class="fas fa-user-graduate"></i> Alunos
+        </div>
+        <div class="menu-item active">
+          <i class="fas fa-clipboard-list"></i> Empréstimos
+        </div>
+        <div
+          class="menu-item"
+          onclick="window.location.href='../ListaFerramentas/ListaFerramentas.html'"
+        >
+          <i class="fas fa-toolbox"></i> Ferramentas
+        </div>
+        <div
+          class="menu-item"
+          onclick="window.location.href='../Locais/local.html'"
+        >
+          <i class="fas fa-map-marker-alt"></i> Locais
+        </div>
+        <div class="menu-item" onclick="navigate('novo-emprestimo')">
+          <i class="fas fa-plus-circle"></i> Novo Empréstimo
+        </div>
+        <div class="menu-item" onclick="window.location.href='../index.html'">
+          <i class="fas fa-sign-out-alt"></i> Sair
+        </div>
+      </div>
+
+      <!-- Conteúdo Principal -->
+      <div class="main-content">
+        <div class="header">
+          <h1 class="page-title">
+            <i class="fas fa-history"></i> Histórico de Empréstimos
+          </h1>
+          <button
+            class="logout-btn"
+            onclick="window.location.href='../index.html'"
+          >
+            <i class="fas fa-sign-out-alt"></i> Sair do Sistema
+          </button>
         </div>
 
-        <!-- Conteúdo Principal -->
-        <div class="main-content">
-            <div class="header">
-                <h1 class="page-title"><i class="fas fa-history"></i> Histórico de Empréstimos</h1>
-                <button class="logout-btn" onclick="window.location.href='../index.html'">
-                    <i class="fas fa-sign-out-alt"></i> Sair do Sistema
-                </button>
-            </div>
-
-            <!-- Filtros -->
-            <div class="filters">
-                <div class="filter-group">
-                    <label for="filter-user"><i class="fas fa-user"></i> Usuário</label>
-                    <select id="filter-user">
-                        <option value="">Todos os usuários</option>
-                    </select>
-                </div>
-                <div class="filter-group">
-                    <label for="filter-tool"><i class="fas fa-toolbox"></i> Ferramenta</label>
-                    <select id="filter-tool">
-                        <option value="">Todas as ferramentas</option>
-                    </select>
-                </div>
-                <div class="filter-group">
-                    <label for="filter-status"><i class="fas fa-info-circle"></i> Status</label>
-                    <select id="filter-status">
-                        <option value="">Todos os status</option>
-                        <option value="active">Em andamento</option>
-                        <option value="returned">Devolvido</option>
-                        <option value="delayed">Em atraso</option>
-                    </select>
-                </div>
-            </div>
-
-            <!-- Tabela de Empréstimos -->
-            <div style="overflow-x: auto;">
-                <table class="loans-table">
-                    <thead>
-                        <tr>
-                            <th>ID</th>
-                            <th>Usuário</th>
-                            <th>Turma</th>
-                            <th>Ferramenta</th>
-                            <th>Localização</th>
-                            <th>Data Retirada</th>
-                            <th>Data Devolução</th>
-                            <th>Status</th>
-                            <th>Observações</th>
-                        </tr>
-                    </thead>
-                    <tbody id="loans-table-body">
-                        <!-- Dados serão carregados via JavaScript -->
-                    </tbody>
-                </table>
-            </div>
-
-            <!-- Paginação -->
-            <div class="pagination">
-                <button id="prev-page" disabled><i class="fas fa-chevron-left"></i> Anterior</button>
-                <span id="page-info">Página 1 de 3</span>
-                <button id="next-page">Próxima <i class="fas fa-chevron-right"></i></button>
-            </div>
+        <!-- Filtros -->
+        <div class="filters">
+          <div class="filter-group">
+            <label for="filter-user"><i class="fas fa-user"></i> Usuário</label>
+            <select id="filter-user">
+              <option value="">Todos os usuários</option>
+            </select>
+          </div>
+          <div class="filter-group">
+            <label for="filter-tool"
+              ><i class="fas fa-toolbox"></i> Ferramenta</label
+            >
+            <select id="filter-tool">
+              <option value="">Todas as ferramentas</option>
+            </select>
+          </div>
+          <div class="filter-group">
+            <label for="filter-status"
+              ><i class="fas fa-info-circle"></i> Status</label
+            >
+            <select id="filter-status">
+              <option value="">Todos os status</option>
+              <option value="active">Em andamento</option>
+              <option value="returned">Devolvido</option>
+              <option value="delayed">Em atraso</option>
+            </select>
+          </div>
         </div>
+
+        <!-- Tabela de Empréstimos -->
+        <div style="overflow-x: auto">
+          <table class="loans-table">
+            <thead>
+              <tr>
+                <th>ID</th>
+                <th>Usuário</th>
+                <th>Turma</th>
+                <th>Ferramenta</th>
+                <th>Localização</th>
+                <th>Data Retirada</th>
+                <th>Data Devolução</th>
+                <th>Status</th>
+                <th>Observações</th>
+              </tr>
+            </thead>
+            <tbody id="loans-table-body">
+              <!-- Dados serão carregados via JavaScript -->
+            </tbody>
+          </table>
+        </div>
+
+        <!-- Paginação -->
+        <div class="pagination">
+          <button id="prev-page" disabled>
+            <i class="fas fa-chevron-left"></i> Anterior
+          </button>
+          <span id="page-info">Página 1 de 3</span>
+          <button id="next-page">
+            Próxima <i class="fas fa-chevron-right"></i>
+          </button>
+        </div>
+      </div>
     </div>
 
-    <script src="JS/EmpVisu.js" defer>
-       
-    </script>
-</body>
+    <script src="JS/EmpVisu.js" defer></script>
+  </body>
 </html>
