--- a/front/ListaFerramentas/ListaFerramentas.html
+++ b/front/ListaFerramentas/ListaFerramentas.html
@@ -4,14 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sistema de Empréstimos - Ferramentas</title>
+    <link rel="stylesheet" href="./CSS/ListaFerramentasCSS.css" />
+    <script src="./JS/ListaFerramentasJS.js" defer></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <!-- Seu arquivo CSS existente -->
-    <link rel="stylesheet" href="CSS/ListaFerramentasCSS.css" />
   </head>
   <body>
+    <div class="loading-overlay" id="loading-overlay">
+      <div class="loading-content">
+        <div class="loading" style="width: 40px; height: 40px"></div>
+        <p style="margin-top: 20px; font-size: 1.2rem">Carregando dados...</p>
+      </div>
+    </div>
+
     <div class="container">
       <!-- Menu Lateral -->
       <div class="sidebar">
@@ -49,14 +56,11 @@
 
       <!-- Conteúdo Principal - Página de Ferramentas -->
       <div class="main-content">
-        <div class="header">
+        <div class="header" onclick="window.location.href='../index.html'">
           <h1 class="page-title">
             <i class="fas fa-toolbox"></i> Ferramentas Cadastradas
           </h1>
-          <button
-            class="logout-btn"
-            onclick="window.location.href='../index.html'"
-          >
+          <button class="logout-btn">
             <i class="fas fa-sign-out-alt"></i> Sair do Sistema
           </button>
         </div>
@@ -80,8 +84,8 @@
           </div>
         </div>
 
-        <!-- Tabela de Ferramentas -->
-        <div style="overflow-x: auto">
+        <!-- Tabela de Ferramentas (Desktop) -->
+        <div class="tools-container">
           <table class="tools-table">
             <thead>
               <tr>
@@ -89,11 +93,11 @@
                 <th>Nome</th>
                 <th>Marca</th>
                 <th>Modelo</th>
-                <th>Estoque</th>
-                <th>Espaço</th>
-                <th>Armário</th>
-                <th>Prateleira</th>
-                <th>Estojo</th>
+                <th>QR Code</th>
+                <th>Estado</th>
+                <th>Disponível</th>
+                <th>Descrição</th>
+                <th>Local</th>
                 <th>Ações</th>
               </tr>
             </thead>
@@ -101,6 +105,11 @@
               <!-- Dados serão carregados via JavaScript -->
             </tbody>
           </table>
+        </div>
+
+        <!-- Cards de Ferramentas (Mobile) -->
+        <div class="tools-cards" id="tools-cards">
+          <!-- Dados serão carregados via JavaScript -->
         </div>
 
         <!-- Modal para Adicionar/Editar Ferramenta -->
@@ -145,64 +154,50 @@
                   </div>
                 </div>
 
+                <div class="form-row">
+                  <div class="form-group">
+                    <label for="tool-qrcode">QR Code</label>
+                    <input type="text" id="tool-qrcode" class="form-control" />
+                  </div>
+                  <div class="form-group">
+                    <label for="tool-estado">Estado *</label>
+                    <select id="tool-estado" class="form-control" required>
+                      <option value="">Selecione...</option>
+                      <option value="Novo">Novo</option>
+                      <option value="Usado">Usado</option>
+                      <option value="Desgastado">Desgastado</option>
+                      <option value="Danificado">Danificado</option>
+                    </select>
+                  </div>
+                </div>
+
+                <div class="form-row">
+                  <div class="form-group">
+                    <label for="tool-id_local">Local *</label>
+                    <select id="tool-id_local" class="form-control" required>
+                      <option value="">Carregando locais...</option>
+                    </select>
+                  </div>
+                  <div class="form-group">
+                    <label>Disponibilidade *</label>
+                    <div class="checkbox-group">
+                      <input
+                        type="checkbox"
+                        id="tool-disponibilidade"
+                        checked
+                      />
+                      <label for="tool-disponibilidade">Disponível</label>
+                    </div>
+                  </div>
+                </div>
+
                 <div class="form-group">
-                  <label for="tool-stock">Estoque *</label>
-                  <input
-                    type="number"
-                    id="tool-stock"
+                  <label for="tool-descricao">Descrição</label>
+                  <textarea
+                    id="tool-descricao"
                     class="form-control"
-                    min="0"
-                    required
-                  />
-                </div>
-
-                <div class="form-group">
-                  <label for="tool-location">Localização *</label>
-                  <select id="tool-location" class="form-control" required>
-                    <option value="">Selecione um local</option>
-                    <!-- Opções serão preenchidas via JavaScript -->
-                  </select>
-                </div>
-
-                <div
-                  id="location-details"
-                  style="
-                    display: none;
-                    margin-top: 20px;
-                    padding: 15px;
-                    background: #f8f9fa;
-                    border-radius: 5px;
-                  "
-                >
-                  <h3>Detalhes do Local</h3>
-                  <div class="location-info">
-                    <i class="fas fa-building"></i>
-                    <span
-                      ><strong>Espaço:</strong>
-                      <span id="location-space-detail"></span
-                    ></span>
-                  </div>
-                  <div class="location-info">
-                    <i class="fas fa-archive"></i>
-                    <span
-                      ><strong>Armário:</strong>
-                      <span id="location-cabinet-detail"></span
-                    ></span>
-                  </div>
-                  <div class="location-info">
-                    <i class="fas fa-layer-group"></i>
-                    <span
-                      ><strong>Prateleira:</strong>
-                      <span id="location-shelf-detail"></span
-                    ></span>
-                  </div>
-                  <div class="location-info">
-                    <i class="fas fa-box"></i>
-                    <span
-                      ><strong>Estojo:</strong>
-                      <span id="location-case-detail"></span
-                    ></span>
-                  </div>
+                    rows="3"
+                  ></textarea>
                 </div>
               </form>
             </div>
@@ -217,11 +212,6 @@
       </div>
     </div>
 
-    <!-- Elementos para notificações e loading -->
-    <div id="notification" class="notification" style="display: none"></div>
-    <div id="loading-overlay" class="loading-overlay" style="display: none">
-      <div class="loading-spinner"></div>
-    </div>
-    <script src="./JS/ListaFerramentasJS.js"></script>
+    <div id="notification" class="notification"></div>
   </body>
 </html>
