--- a/front/MenuProf/Menu.html
+++ b/front/MenuProf/Menu.html
@@ -31,7 +31,7 @@
       <div
         class="menu-card"
         id="emprestimos"
-        onclick="window.location.href='#'"
+        onclick="window.location.href='../VerEmprestimo/Emprestimos.html'"
       >
         <h2>Empréstimos</h2>
         <p>Histórico de itens emprestados</p>
@@ -41,7 +41,7 @@
       <div
         class="menu-card"
         id="ferramentas"
-        onclick="window.location.href='#'"
+        onclick="window.location.href='../ListaFerramentas/ListaFerramentas.html'"
       >
         <h2>Ferramentas</h2>
         <p>Visualizar ferramentas cadastradas</p>
