--- a/front/VerEmprestimo/Emprestimos.html
+++ b/front/VerEmprestimo/Emprestimos.html
@@ -116,7 +116,7 @@
           <button id="prev-page" disabled>
             <i class="fas fa-chevron-left"></i> Anterior
           </button>
-          <span id="page-info">Página 1 de 3</span>
+          <span id="page-info"></span>
           <button id="next-page">
             Próxima <i class="fas fa-chevron-right"></i>
           </button>
