--- a/front/MenuProf/Menu.html
+++ b/front/MenuProf/Menu.html
@@ -21,10 +21,10 @@
       <div
         class="menu-card"
         id="alunos"
-        onclick="window.location.href='../ListaAluno/ListAluno.html'"
+        onclick="window.location.href='../ListaAluno/ListUsuário.html'"
       >
-        <h2>Alunos</h2>
-        <p>Visualizar alunos cadastrados</p>
+        <h2>Usuários</h2>
+        <p>Visualizar Usuários</p>
       </div>
 
       <!-- Empréstimos -->
@@ -54,7 +54,7 @@
         onclick="window.location.href='../Locais/local.html'"
       >
         <h2>Locais</h2>
-        <p>Áreas de empréstimo cadastradas</p>
+        <p>Áreas cadastradas</p>
       </div>
 
       <!-- Novo Empréstimo -->
