--- a/front/ListaAluno/ListUsuário.html
+++ b/front/ListaAluno/ListUsuário.html
@@ -3,103 +3,57 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sistema de Empréstimos - Alunos</title>
-    <script src="./JS/ListaAlunJS.js" defer></script>
+    <title>Sistema de Empréstimos - Usuários</title>
+    <script src="./JS/ListaUsuario.js" defer></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="CSS/ListaAlunCss.css" />
-    <style>
-      /* Estilos básicos para garantir a funcionalidade */
-      .container {
-        display: flex;
-        min-height: 100vh;
-      }
-
-      .sidebar {
-        width: 250px;
-        background: #2c3e50;
-        color: white;
-        padding: 20px;
-      }
-
-      .main-content {
-        flex: 1;
-        padding: 20px;
-      }
-
-      .modal {
-        display: none;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba(0, 0, 0, 0.5);
-        justify-content: center;
-        align-items: center;
-      }
-
-      .modal-content {
-        background: white;
-        padding: 20px;
-        border-radius: 8px;
-        width: 500px;
-      }
-
-      .btn-icon {
-        background: none;
-        border: none;
-        cursor: pointer;
-        padding: 5px;
-        margin: 0 3px;
-      }
-
-      .btn-danger {
-        color: #e74c3c;
-      }
-
-      .btn-primary {
-        background: #3498db;
-        color: white;
-        border: none;
-        padding: 10px 15px;
-        border-radius: 4px;
-        cursor: pointer;
-      }
-    </style>
+    <link rel="stylesheet" href="CSS/ListaUser.css" />
+  
   </head>
   <body>
     <div class="container">
-      <!-- Menu Lateral -->
       <div class="sidebar">
         <div class="logo">
-          <h2><i class="fas fa-tools"></i> Controle de Empréstimos</h2>
+          <h2><i class="fas fa-user"></i> Controle de Usuários</h2>
         </div>
-        <div class="menu-item active">
-          <i class="fas fa-user-graduate"></i> Alunos
+        <div class="menu-item active"
+        onclick="window.location.href='../ListaAluno/ListUsuário.html'">
+          <i class="fas fa-user"></i> Usuários
         </div>
-        <div class="menu-item">
+
+        <div class="menu-item"
+        onclick="window.location.href='../VerEmprestimo/Emprestimos.html'">
           <i class="fas fa-clipboard-list"></i> Empréstimos
         </div>
-        <div class="menu-item"><i class="fas fa-toolbox"></i> Ferramentas</div>
-        <div class="menu-item">
+
+        <div class="menu-item"
+        onclick="window.location.href='../ListaFerramentas/ListaFerramentas.html'">
+        <i class="fas fa-toolbox"></i> Ferramentas</div>
+
+
+        <div class="menu-item"
+        onclick="window.location.href='../Locais/local.html'">
           <i class="fas fa-map-marker-alt"></i> Locais
         </div>
-        <div class="menu-item">
+
+        <div class="menu-item"
+        onclick="window.location.href='#'">
           <i class="fas fa-plus-circle"></i> Novo Empréstimo
+        </div
+        >
+        <div class="menu-item" onclick="window.location.href='../index.html'">
+          <i class="fas fa-sign-out-alt"></i> Sair
         </div>
-        <div class="menu-item"><i class="fas fa-sign-out-alt"></i> Sair</div>
       </div>
 
-      <!-- Conteúdo Principal - Página de Alunos -->
       <div class="main-content">
         <div class="header">
           <h1 class="page-title">
-            <i class="fas fa-user-graduate"></i> Alunos Matriculados
+            <i class="fas fa-user"></i> Usuários
           </h1>
-          <button class="logout-btn">
+          <button class="logout-btn" onclick="window.location.href='../index.html'">
             <i class="fas fa-sign-out-alt"></i> Sair do Sistema
           </button>
         </div>
@@ -107,7 +61,7 @@
         <!-- Botões de Ação -->
         <div class="action-buttons">
           <button class="btn btn-primary" onclick="openAddStudentModal()">
-            <i class="fas fa-plus"></i> Adicionar Aluno
+            <i class="fas fa-plus"></i> Adicionar Usuário
           </button>
         </div>
 
@@ -118,13 +72,13 @@
             <input
               type="text"
               id="search-input"
-              placeholder="Pesquisar aluno..."
+              placeholder="Pesquisar Usuário..."
               oninput="searchStudents()"
             />
           </div>
         </div>
 
-        <!-- Tabela de Alunos - Simplificada -->
+       
         <div style="overflow-x: auto">
           <table class="students-table">
             <thead>
@@ -142,11 +96,11 @@
           </table>
         </div>
 
-        <!-- Modal para Adicionar/Editar Aluno -->
+        
         <div id="student-modal" class="modal">
           <div class="modal-content">
             <div class="modal-header">
-              <h2 id="modal-title">Adicionar Novo Aluno</h2>
+              <h2 id="modal-title">Adicionar Novo Usuário</h2>
               <button class="close-btn" onclick="closeModal()">&times;</button>
             </div>
             <div class="modal-body">
@@ -187,7 +141,7 @@
             <div class="modal-footer">
               <button class="btn" onclick="closeModal()">Cancelar</button>
               <button class="btn btn-primary" onclick="saveStudent()">
-                Salvar Aluno
+                Salvar Usuário
               </button>
             </div>
           </div>
