--- a/front/ListaFerramentas/ListaFerramentas.html
+++ b/front/ListaFerramentas/ListaFerramentas.html
@@ -23,14 +23,15 @@
       <!-- Menu Lateral -->
       <div class="sidebar">
         <div class="logo">
-          <h2><i class="fas fa-tools"></i> Controle de Empréstimos</h2>
+          <h2><i class="fas fa-tools"></i> Controle de Ferramentas</h2>
         </div>
         <div
           class="menu-item"
-          onclick="window.location.href='../ListaAluno/ListAluno.html'"
+          onclick="window.location.href='../ListaAluno/ListUsuário.html'"
         >
-          <i class="fas fa-user-graduate"></i> Alunos
+          <i class="fas fa-user"></i> Usuários
         </div>
+        
         <div
           class="menu-item"
           onclick="window.location.href='../VerEmprestimo/Emprestimos.html'"
