--- a/front/Locais/local.html
+++ b/front/Locais/local.html
@@ -20,9 +20,9 @@
         </div>
         <div
           class="menu-item"
-          onclick="window.location.href='../ListaAluno/ListAluno.html'"
+          onclick="window.location.href='../ListaAluno/ListUsuário.html'"
         >
-          <i class="fas fa-user-graduate"></i> Alunos
+          <i class="fas fa-user"></i> Usuários
         </div>
         <div
           class="menu-item"
