--- a/front/VerEmprestimo/Emprestimos.html
+++ b/front/VerEmprestimo/Emprestimos.html
@@ -19,9 +19,9 @@
         </div>
         <div
           class="menu-item"
-          onclick="window.location.href='../ListaAluno/ListAluno.html'"
+          onclick="window.location.href='../ListaAluno/ListUsuário.html'"
         >
-          <i class="fas fa-user-graduate"></i> Alunos
+          <i class="fas fa-user"></i> Usuários
         </div>
         <div class="menu-item active">
           <i class="fas fa-clipboard-list"></i> Empréstimos
