--- a/front/ListaFerramentas/ListaFerramentas.html
+++ b/front/ListaFerramentas/ListaFerramentas.html
@@ -31,7 +31,7 @@
         >
           <i class="fas fa-user"></i> Usuários
         </div>
-        
+
         <div
           class="menu-item"
           onclick="window.location.href='../VerEmprestimo/Emprestimos.html'"
@@ -47,7 +47,10 @@
         >
           <i class="fas fa-map-marker-alt"></i> Locais
         </div>
-        <div class="menu-item">
+        <div
+          class="menu-item"
+          onclick="window.location.href='../PostEmp/PostEmp.html'"
+        >
           <i class="fas fa-plus-circle"></i> Novo Empréstimo
         </div>
         <div class="menu-item" onclick="window.location.href='../index.html'">
