--- a/front/Locais/local.html
+++ b/front/Locais/local.html
@@ -39,7 +39,10 @@
         <div class="menu-item active">
           <i class="fas fa-map-marker-alt"></i> Locais
         </div>
-        <div class="menu-item">
+        <div
+          class="menu-item"
+          onclick="window.location.href='../PostEmp/PostEmp.html'"
+        >
           <i class="fas fa-plus-circle"></i> Novo Empréstimo
         </div>
         <div class="menu-item" onclick="window.location.href='../index.html'">
