--- a/front/ListaFerramentas/ListaFerramentas.html
+++ b/front/ListaFerramentas/ListaFerramentas.html
@@ -60,12 +60,15 @@
 
       <!-- Conteúdo Principal - Página de Ferramentas -->
       <div class="main-content">
-        <div class="header" onclick="window.location.href='../index.html'">
+        <div
+          class="header"
+          onclick="window.location.href='../MenuProf/Menu.html'"
+        >
           <h1 class="page-title">
             <i class="fas fa-toolbox"></i> Ferramentas Cadastradas
           </h1>
           <button class="logout-btn">
-            <i class="fas fa-sign-out-alt"></i> Sair do Sistema
+            <i class="fas fa-sign-out-alt"></i> Sair para Menu
           </button>
         </div>
 
