--- a/front/Locais/local.html
+++ b/front/Locais/local.html
@@ -58,9 +58,9 @@
           </h1>
           <button
             class="logout-btn"
-            onclick="window.location.href='../index.html'"
+            onclick="window.location.href='../MenuProf/Menu.html'"
           >
-            <i class="fas fa-sign-out-alt"></i> Sair
+            <i class="fas fa-sign-out-alt"></i> Sair para Menu
           </button>
         </div>
 
