--- a/front/ListaAluno/ListUsuário.html
+++ b/front/ListaAluno/ListUsuário.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sistema de Empréstimos - Usuários</title>
     <script src="./JS/ListaUsuario.js" defer></script>
+    <link rel="stylesheet" href="./CSS/ListaUser.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="CSS/ListaUser.css" />
   </head>
   <body>
     <div class="container">
@@ -61,9 +61,9 @@
           <h1 class="page-title"><i class="fas fa-user"></i> Usuários</h1>
           <button
             class="logout-btn"
-            onclick="window.location.href='../index.html'"
+            onclick="window.location.href='../MenuProf/Menu.html'"
           >
-            <i class="fas fa-sign-out-alt"></i> Sair do Sistema
+            <i class="fas fa-sign-out-alt"></i> Sair para Menu
           </button>
         </div>
 
@@ -95,6 +95,7 @@
                 <th>Nome</th>
                 <th>Sobrenome</th>
                 <th>Turma</th>
+                <th>Tipo de Usuário</th>
                 <th>Ações</th>
               </tr>
             </thead>
@@ -135,13 +136,26 @@
                   </div>
                 </div>
 
-                <div class="form-group">
-                  <label for="class">Turma</label>
-                  <select id="class" class="form-control" required>
-                    <option value="">Selecione uma turma</option>
-                    <option value="1º INFO A">1º Oficina Industrial</option>
-                    <option value="1º INFO B">2º Oficina</option>
-                  </select>
+                <div class="form-row">
+                  <div class="form-group">
+                    <label for="class">Turma</label>
+                    <select id="class" class="form-control" required>
+                      <option value="">Selecione uma turma</option>
+                      <option value="1º INFO A">1º Oficina Industrial</option>
+                      <option value="1º INFO B">2º Oficina</option>
+                    </select>
+                  </div>
+                  <div class="form-group">
+                    <label for="user-type">Tipo de Usuário</label>
+                    <input
+                      type="text"
+                      id="user-type"
+                      class="form-control"
+                      readonly
+                      disabled
+                      style="background-color: #f5f5f5; cursor: not-allowed"
+                    />
+                  </div>
                 </div>
               </form>
             </div>
