--- a/front/VerEmprestimo/Emprestimos.html
+++ b/front/VerEmprestimo/Emprestimos.html
@@ -1,117 +1,149 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sistema de Empréstimos - Histórico</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="./CSS/EmprestimoVisu.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+    <link rel="stylesheet" href="./CSS/EmprestimoVisu.css" />
     <script src="./JS/EmpVisu.js" defer></script>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <!-- Menu Lateral -->
-        <div class="sidebar">
-            <div class="logo">
-                <h2><i class="fas fa-tools"></i> <span>Controle de Empréstimos</span></h2>
-            </div>
-            <div class="menu-item" 
-            onclick="window.location.href='../ListaAluno/ListUsuário.html'">
-                <i class="fas fa-user"></i> <span>Usuários</span>
-            </div>
-            <div class="menu-item active"
-            onclick="window.location.href='../VerEmprestimo/Emprestimos.html'">
-                <i class="fas fa-clipboard-list"></i> <span>Empréstimos</span>
-            </div>
-            <div class="menu-item"
-            onclick="window.location.href='../ListaFerramentas/ListaFerramentas.html'">
-                <i class="fas fa-toolbox"></i> <span>Ferramentas</span>
-            </div>
-            <div class="menu-item"
-            onclick="window.location.href='../Locais/Local.html'">
-                <i class="fas fa-map-marker-alt"></i> <span>Locais</span>
-            </div >
-            <!-- CORREÇÃO AQUI: Mudei o redirecionamento para a página correta -->
-            <div class="menu-item" id="novo-emprestimo-btn" >
-                <i class="fas fa-plus-circle"></i> <span>Novo Empréstimo</span>
-            </div>
-            
-            <div class="menu-item" 
-            onclick="window.location.href='../index.html'">
-                <i class="fas fa-sign-out-alt"></i> <span>Sair</span>
-            </div>
+      <!-- Menu Lateral -->
+      <div class="sidebar">
+        <div class="logo">
+          <h2>
+            <i class="fas fa-tools"></i> <span>Controle de Empréstimos</span>
+          </h2>
+        </div>
+        <div
+          class="menu-item"
+          onclick="window.location.href='../ListaAluno/ListUsuário.html'"
+        >
+          <i class="fas fa-user"></i> <span>Usuários</span>
+        </div>
+        <div
+          class="menu-item active"
+          onclick="window.location.href='../VerEmprestimo/Emprestimos.html'"
+        >
+          <i class="fas fa-clipboard-list"></i> <span>Empréstimos</span>
+        </div>
+        <div
+          class="menu-item"
+          onclick="window.location.href='../ListaFerramentas/ListaFerramentas.html'"
+        >
+          <i class="fas fa-toolbox"></i> <span>Ferramentas</span>
+        </div>
+        <div
+          class="menu-item"
+          onclick="window.location.href='../Locais/Local.html'"
+        >
+          <i class="fas fa-map-marker-alt"></i> <span>Locais</span>
+        </div>
+        <!-- CORREÇÃO AQUI: Mudei o redirecionamento para a página correta -->
+        <div class="menu-item" id="novo-emprestimo-btn">
+          <i class="fas fa-plus-circle"></i> <span>Novo Empréstimo</span>
         </div>
 
-        <!-- Conteúdo Principal -->
-        <div class="main-content">
-            <div class="header">
-                <h1 class="page-title"><i class="fas fa-history"></i> Histórico de Empréstimos</h1>
-                <button class="logout-btn" onclick="window.location.href='../index.html'">
-                    <i class="fas fa-sign-out-alt"></i> Sair do Sistema
-                </button>
-            </div>
-
-            <!-- Mensagens de feedback -->
-            <div id="feedback-message" class="feedback-message" style="display: none"></div>
-
-            <!-- Filtros -->
-            <div class="filters">
-                <div class="filter-group">
-                    <label for="filter-user"><i class="fas fa-user"></i> Usuário</label>
-                    <input type="text" id="filter-user" placeholder="Filtrar por usuário">
-                </div>
-                <div class="filter-group">
-                    <label for="filter-tool"><i class="fas fa-toolbox"></i> Ferramenta</label>
-                    <input type="text" id="filter-tool" placeholder="Filtrar por ferramenta">
-                </div>
-                <div class="filter-group">
-                    <label for="filter-status"><i class="fas fa-info-circle"></i> Status</label>
-                    <select id="filter-status">
-                        <option value="">Todos os status</option>
-                        <option value="active">Em andamento</option>
-                        <option value="returned">Devolvido</option>
-                        <option value="delayed">Em atraso</option>
-                    </select>
-                </div>
-            </div>
-
-            <!-- Tabela de Empréstimos -->
-            <div style="overflow-x: auto">
-                <table class="loans-table">
-                    <thead>
-                        <tr>
-                            <th>ID</th>
-                            <th>Usuário</th>
-                            <th>Ferramenta</th>
-                            <th>Data Retirada</th>
-                            <th>Data Devolução</th>
-                            <th>Status</th>
-                            <th>Observações</th>
-                        </tr>
-                    </thead>
-                    <tbody id="loans-table-body">
-                        <!-- Dados serão carregados via JavaScript -->
-                        <tr>
-                            <td colspan="7" style="text-align: center; padding: 20px;">
-                                Carregando empréstimos...
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-
-            <!-- Paginação -->
-            <div class="pagination">
-                <button id="prev-page" disabled>
-                    <i class="fas fa-chevron-left"></i> Anterior
-                </button>
-                <span id="page-info">Página 1 de 1</span>
-                <button id="next-page">
-                    Próxima <i class="fas fa-chevron-right"></i>
-                </button>
-            </div>
+        <div class="menu-item" onclick="window.location.href='../index.html'">
+          <i class="fas fa-sign-out-alt"></i> <span>Sair</span>
         </div>
+      </div>
+
+      <!-- Conteúdo Principal -->
+      <div class="main-content">
+        <div class="header">
+          <h1 class="page-title">
+            <i class="fas fa-history"></i> Histórico de Empréstimos
+          </h1>
+          <button
+            class="logout-btn"
+            onclick="window.location.href='../MenuProf/Menu.html'"
+          >
+            <i class="fas fa-sign-out-alt"></i> Sair para Menu
+          </button>
+        </div>
+
+        <!-- Mensagens de feedback -->
+        <div
+          id="feedback-message"
+          class="feedback-message"
+          style="display: none"
+        ></div>
+
+        <!-- Filtros -->
+        <div class="filters">
+          <div class="filter-group">
+            <label for="filter-user"><i class="fas fa-user"></i> Usuário</label>
+            <input
+              type="text"
+              id="filter-user"
+              placeholder="Filtrar por usuário"
+            />
+          </div>
+          <div class="filter-group">
+            <label for="filter-tool"
+              ><i class="fas fa-toolbox"></i> Ferramenta</label
+            >
+            <input
+              type="text"
+              id="filter-tool"
+              placeholder="Filtrar por ferramenta"
+            />
+          </div>
+          <div class="filter-group">
+            <label for="filter-status"
+              ><i class="fas fa-info-circle"></i> Status</label
+            >
+            <select id="filter-status">
+              <option value="">Todos os status</option>
+              <option value="active">Em andamento</option>
+              <option value="returned">Devolvido</option>
+              <option value="delayed">Em atraso</option>
+            </select>
+          </div>
+        </div>
+
+        <!-- Tabela de Empréstimos -->
+        <div style="overflow-x: auto">
+          <table class="loans-table">
+            <thead>
+              <tr>
+                <th>ID</th>
+                <th>Usuário</th>
+                <th>Ferramenta</th>
+                <th>Data Retirada</th>
+                <th>Data Devolução</th>
+                <th>Status</th>
+                <th>Observações</th>
+              </tr>
+            </thead>
+            <tbody id="loans-table-body">
+              <!-- Dados serão carregados via JavaScript -->
+              <tr>
+                <td colspan="7" style="text-align: center; padding: 20px">
+                  Carregando empréstimos...
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+
+        <!-- Paginação -->
+        <div class="pagination">
+          <button id="prev-page" disabled>
+            <i class="fas fa-chevron-left"></i> Anterior
+          </button>
+          <span id="page-info">Página 1 de 1</span>
+          <button id="next-page">
+            Próxima <i class="fas fa-chevron-right"></i>
+          </button>
+        </div>
+      </div>
     </div>
-
-</body>
+  </body>
 </html>
