Options de Turma - Post Aluno

--- a/front/ListaAluno/ListUsuário.html
+++ b/front/ListaAluno/ListUsuário.html
@@ -141,8 +141,9 @@
                     <label for="class">Turma</label>
                     <select id="class" class="form-control" required>
                       <option value="">Selecione uma turma</option>
-                      <option value="1º INFO A">1º Oficina Industrial</option>
-                      <option value="1º INFO B">2º Oficina</option>
+                      <option value="Mecânico de Manutenção">Mecânico de Manutenção</option>
+                      <option value="Mecânico de Usinagem">Mecânico de Usinagem</option>
+                      <option value="Desenvolvimento de Sistema">Desenvolvimento de Sistema</option>
                     </select>
                   </div>
                   <div class="form-group">
