MenuProf - Responsividade pronta

--- a/front/MenuProf/Menu.html
+++ b/front/MenuProf/Menu.html
@@ -8,8 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
       rel="stylesheet"
     />
-    <script src="JS/menuJS.js"></script>
-    <link rel="stylesheet" href="CSS/Menu.css" />
+    <link rel="stylesheet" href="./CSS/Menu.css" />
   </head>
   <body>
     <div class="header">
@@ -61,7 +60,7 @@
       <div
         class="menu-card"
         id="novo-emprestimo"
-        onclick="window.location.href='#'"
+        onclick="window.location.href='../PostEmp/PostEmp.html'"
       >
         <h2>Fazer Empréstimo</h2>
         <p>Registrar empréstimo do professor</p>
