--- a/front/VerEmprestimo/Emprestimos.html
+++ b/front/VerEmprestimo/Emprestimos.html
@@ -120,6 +120,7 @@
                 <th>Data Devolução</th>
                 <th>Status</th>
                 <th>Observações</th>
+                <th>Ações</th>
               </tr>
             </thead>
             <tbody id="loans-table-body">
