--- a/front/VerEmprestimo/Emprestimos.html
+++ b/front/VerEmprestimo/Emprestimos.html
@@ -114,13 +114,13 @@
             <thead>
               <tr>
                 <th>ID</th>
-                <th>Usuário</th>
+                <th>ㅤUsuário</th>
                 <th>Ferramenta</th>
                 <th>Data Retirada</th>
                 <th>Data Devolução</th>
-                <th>Status</th>
+                <th>ㅤStatus</th>
                 <th>Observações</th>
-                <th>Ações</th>
+                <th>ㅤㅤAções</th>
               </tr>
             </thead>
             <tbody id="loans-table-body">
