--- a/front/Locais/local.html
+++ b/front/Locais/local.html
@@ -16,37 +16,42 @@
       <!-- Menu Lateral -->
       <div class="sidebar">
         <div class="logo">
-          <h2><i class="fas fa-map-marker-alt"></i> Sistema Locais</h2>
+          <h2>
+            <i class="fas fa-map-marker-alt"></i> <span>Sistema Locais</span>
+          </h2>
         </div>
         <div
           class="menu-item"
           onclick="window.location.href='../ListaAluno/ListUsuário.html'"
         >
-          <i class="fas fa-user"></i> Usuários
+          <i class="fas fa-user"></i> <span>Usuários</span>
         </div>
         <div
           class="menu-item"
           onclick="window.location.href='../VerEmprestimo/Emprestimos.html'"
         >
-          <i class="fas fa-clipboard-list"></i> Empréstimos
+          <i class="fas fa-clipboard-list"></i> <span>Empréstimos</span>
         </div>
         <div
           class="menu-item"
           onclick="window.location.href='../ListaFerramentas/ListaFerramentas.html'"
         >
-          <i class="fas fa-toolbox"></i> Ferramentas
+          <i class="fas fa-toolbox"></i> <span>Ferramentas</span>
         </div>
-        <div class="menu-item active">
-          <i class="fas fa-map-marker-alt"></i> Locais
+        <div
+          class="menu-item active"
+          onclick="window.location.href='../Locais/local.html'"
+        >
+          <i class="fas fa-map-marker-alt"></i> <span>Locais</span>
         </div>
         <div
           class="menu-item"
           onclick="window.location.href='../PostEmp/PostEmp.html'"
         >
-          <i class="fas fa-plus-circle"></i> Novo Empréstimo
+          <i class="fas fa-plus-circle"></i> <span>Novo Empréstimo</span>
         </div>
         <div class="menu-item" onclick="window.location.href='../index.html'">
-          <i class="fas fa-sign-out-alt"></i> Sair
+          <i class="fas fa-sign-out-alt"></i> <span>Sair</span>
         </div>
       </div>
 
