Responsividade ferramentas cadastradas

--- a/front/MenuProf/Menu.html
+++ b/front/MenuProf/Menu.html
@@ -61,7 +61,7 @@
       <div
         class="menu-card"
         id="novo-emprestimo"
-        onclick="window.location.href='#'"
+        onclick="window.location.href='../PostEmp/PostEmp.html'"
       >
         <h2>Fazer Empréstimo</h2>
         <p>Registrar empréstimo do professor</p>
